# csliquid

./: .gitignore  .vercelignore  CLAUDE_CODE_PROMPT.md  commit-push.bat  download_images.ps1  fix.ps1  next.config.mjs  package-lock.json  package.json  push.bat  tailwind.config.ts  tsconfig.json  tweets.json  update_allmarkets.ps1  vercel.json
keeper/: deploy.sh  ecosystem.config.js  index.ts  package-lock.json  package.json  tsconfig.json
keeper/idl/: cs_skin_futures.json
keeper/scripts/: initialize-market.ts  reinitialize-pricefeeds.ts
program/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
program/programs/cs_skin_futures/: Cargo.toml
program/programs/cs_skin_futures/src/: errors.rs  lib.rs  math.rs  oracle.rs
program/programs/cs_skin_futures/src/instructions/: add_liquidity.rs  apply_funding.rs  close_position.rs  deposit.rs  initialize_market.rs  initialize_pool.rs  initialize_price_feed.rs  initialize_vault.rs  initialize_vault_token.rs  liquidate.rs  mod.rs  open_position.rs  push_price.rs  remove_liquidity.rs  set_market_authority.rs  set_price_feed_authority.rs  update_funding_rate.rs  update_oracle.rs  withdraw.rs
program/programs/cs_skin_futures/src/state/: liquidity_pool.rs  lp_position.rs  market.rs  mod.rs  position.rs  price_feed.rs  user_account.rs  vault.rs
program/tests/: cs_skin_futures.ts
scripts/: debug-open-position.ts  fix-vault-token.ts  gen-favicon-ico.js  init-awp-market.ts  init-devnet.ts  init-remaining-markets.ts  push-prices.ts  reinit-user-accounts.ts  run-push-prices.js  seed-pool.ts  topup-admin-usdc.ts  tsconfig.json
services/oracle/: package-lock.json  package.json  run.js
src/: middleware.ts
src/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
src/components/: TosModal.tsx  WelcomeModal.tsx
src/contexts/: AuthContext.tsx  WalletContextProvider.tsx
src/hooks/: useMarketPrice.ts  useOnChainPrices.ts  useProgram.ts  useSkinPrice.ts
src/lib/: allMarkets.ts  (+13 more)
(+90 files in other folders)
