[workspace]
members  = ["programs/*"]
resolver = "2"

# ── Release profile ───────────────────────────────────────────────────────────
# These settings are required for Solana's BPF target:
#   overflow-checks  – trap on integer overflow instead of wrapping silently
#   lto = "fat"      – whole-program optimisation reduces binary size significantly
#   codegen-units = 1 – single codegen unit required for reliable LTO
[profile.release]
overflow-checks = true
lto             = "fat"
codegen-units   = 1

[profile.release.build-override]
opt-level     = 3
incremental   = false
codegen-units = 1
