[package]
name        = "cs_skin_futures"
version     = "0.1.0"
description = "CS2 skin perpetual futures protocol on Solana"
edition     = "2021"

# cdylib  – produces the .so shared library deployed on-chain
# lib     – exposes the crate for CPI and off-chain SDK use
[lib]
crate-type = ["cdylib", "lib"]
name       = "cs_skin_futures"

# ── Anchor feature flags ──────────────────────────────────────────────────────
# no-entrypoint  – strip the BPF entrypoint when used as a CPI dependency
# no-idl         – skip IDL generation in CPI builds
# cpi            – enables the CPI client (implies no-entrypoint)
# idl-build      – passes IDL generation through to anchor-lang / anchor-spl
[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# init-if-needed  – enables the `init_if_needed` account constraint
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
# token           – SPL Token Program CPI + account types
# associated_token – ATA creation / validation helpers
anchor-spl  = { version = "0.30.1", features = ["token", "associated_token"] }
